Actually fixed modal on mobile.

--- a/main.css
+++ b/main.css
@@ -82,17 +82,17 @@ span {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
 .modalInner {
     background-color: white;
-    width: 50%;
-    height: 80%;
-    margin: 5% 25%;
+    width: 70vw;
+    height: 80vh;
+    margin: 5vh 15vw;
     font-size: 3vh;
 }
 
